Allow access to the com.apple.laf namespace.
We need access to the com.apple.laf namespace (in java.desktop) to get
the AquaLookAndFeel class. This is a workaround. I am not sure yet what
the proper method would be (if any).